objects/vlocity_cmt__ProductRelationship__c.object
<CustomObject>
    <description>Represents product relationship rules that define relationships such as requires, excludes and recommends. Required relationship rules enable defining products that are required in conjunction with a given product.  For example, the purchase of HD channels requires the installation of an HD receiver.  Exclude relationship rules enable defining products that would not be compatible with (exclude) a given product.  Recomnends relationship rules enable defining products that are logically affiliated and as such could be recommended as a supplemental product. Product relationship rules work independent of product child item bundles; it is unnecessary to use relationship rules to enforce inclusion of all components when product child items are used.</description>
    <fields>
        <fullName>vlocity_cmt__ActionParameters__c</fullName>
        <label>Action Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AddMode__c</fullName>
        <description>for add ,this specifies the mode</description>
        <label>AddMode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>asSibling</fullName>
                    <default>true</default>
                    <label>asSibling</label>
                </value>
                <value>
                    <fullName>asChild</fullName>
                </value>
                <value>
                    <fullName>asRoot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeModificationContext__c</fullName>
        <label>Attribute Modification Context</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Cart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Context__c</fullName>
        <label>Context</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Cart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultQuantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Family__c</fullName>
        <label>Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Modem</fullName>
                </value>
                <value>
                    <fullName>Router</fullName>
                </value>
                <value>
                    <fullName>VOIP</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Repair Package</fullName>
                </value>
                <value>
                    <fullName>Power Supply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsConditional__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Conditional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MaxQuantity__c</fullName>
        <label>Max Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MinQuantity__c</fullName>
        <label>Min Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Relationships</relationshipLabel>
        <relationshipName>RelatedProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RelatedProductFilterId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Product Qualifying Filter</label>
        <referenceTo>vlocity_cmt__EntityFilter__c</referenceTo>
        <relationshipLabel>Product Relationships</relationshipLabel>
        <relationshipName>ProductRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RelatedProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Relationships</relationshipLabel>
        <relationshipName>ProductRelations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RelationshipType__c</fullName>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requires</fullName>
                </value>
                <value>
                    <fullName>Excludes</fullName>
                </value>
                <value>
                    <fullName>Recommends</fullName>
                </value>
                <value>
                    <fullName>Auto-Add</fullName>
                </value>
                <value>
                    <fullName>Auto-Remove</fullName>
                </value>
                <value>
                    <fullName>Auto-Replace</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Relationship</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>vlocity_cmt__Default_quntity_cannot_be_zero</fullName>
        <active>true</active>
        <description>Default quantity should not be zero.</description>
        <errorConditionFormula>vlocity_cmt__DefaultQuantity__c = 0</errorConditionFormula>
        <errorMessage>Default quantity should not be zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__Min_Max_should_build_a_valid_range</fullName>
        <active>false</active>
        <description>Min &amp; Max should build a valid range</description>
        <errorConditionFormula>NOT ( AND ( (vlocity_cmt__MinQuantity__c  &lt;= vlocity_cmt__MaxQuantity__c),(  vlocity_cmt__DefaultQuantity__c &lt;= vlocity_cmt__MaxQuantity__c),( vlocity_cmt__DefaultQuantity__c &gt;= vlocity_cmt__MinQuantity__c)) )</errorConditionFormula>
        <errorMessage>Min Quantity should be less than or equal to Max Quantity And Default Quantity should be in between Min &amp; Max Quantity</errorMessage>
    </validationRules>
</CustomObject>